# Datalake_Ingestion_Security-Monitoring

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml  terraform.yml
1_preliminary/preliminary-setup/: index.html
1_preliminary/security_methods/: index.html
2_terraform/backend-setup/: index.html
2_terraform/terraform-setup/: index.html
3_ingestion/ingestion-overview/: index.html
3_ingestion/pyspark-ingestion/: index.html
4_monitoring/azure-monitor/: index.html
4_monitoring/monitoring-overview/: index.html
data_ingestion/: index.html
docs/: index.md  security_methods.md
docs/1_preliminary/: preliminary-setup.md  preliminary_setup.md  preliminary_setup_complete.md  preliminary_setup_detailed.md  preliminary_setup_updated.md  preliminary_setup_updated_complete.md  preliminary_setup_with_run.md
monitoring/: index.html
scripts/: model.sh  rotate_secrets.sh  set_up_preliminary_environment.sh  setup_preliminary_environment.sh
search/: search_index.json
security_methods/: index.html
terraform/: main.tf  outputs.tf  variables.tf
